Added sleep function and tracker container also styling

--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -14,5 +14,8 @@
     "Don't have an account? Sign Up": "ちゅまけまちゅ？ちゅけま",
     "Home": "ちゅま",
     "Bank": "まちゅん",
-    "Tracker": "ちゅまけま"
+    "Tracker": "ちゅまけま",
+    "Bed Time": "ままちゅちゅ",
+    "Wake up Time": "ちゅちゅまま",
+    "Record Food": "ちゅままちゅ"
 }
