--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,5 +14,8 @@
     "Don't have an account? Sign Up": "Don't have an account? Sign Up",
     "Home": "Home",
     "Bank": "Bank",
-    "Tracker": "Tracker"
+    "Tracker": "Tracker",
+    "Bed Time": "Bed Time",
+    "Wake up Time": "Wake up Time",
+    "Record Food": "Record Food"
 }
