--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -14,5 +14,8 @@
     "Don't have an account? Sign Up": "アカウント登録されてませんか？登録",
     "Home": "ホーム",
     "Bank": "ポイント",
-    "Tracker": "記録"
+    "Tracker": "記録",
+    "Bed Time": "就寝時間",
+    "Wake up Time": "起床時間",
+    "Record Food": "食事記録をつける"
 }
