Added bed time backend

--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -17,5 +17,7 @@
     "Tracker": "ちゅまけま",
     "Bed Time": "ままちゅちゅ",
     "Wake up Time": "ちゅちゅまま",
-    "Record Food": "ちゅままちゅ"
+    "Record Meal": "ちゅままちゅ",
+    "First Meal": "ちゅまのちゅう",
+    "Recent Meal": "けまのちゅう"
 }
