--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,5 +17,7 @@
     "Tracker": "Tracker",
     "Bed Time": "Bed Time",
     "Wake up Time": "Wake up Time",
-    "Record Food": "Record Food"
+    "Record Meal": "Record Meal",
+    "First Meal": "最初の食事",
+    "Recent Meal": "直近の食事"
 }
