--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -17,5 +17,7 @@
     "Tracker": "記録",
     "Bed Time": "就寝時間",
     "Wake up Time": "起床時間",
-    "Record Food": "食事記録をつける"
+    "Record Meal": "食事記録をつける",
+    "First Meal": "最初の食事",
+    "Recent Meal": "直近の食事"
 }
