--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -19,5 +19,6 @@
     "Wake up Time": "ちゅちゅまま",
     "Record Meal": "ちゅままちゅ",
     "First Meal": "ちゅまのちゅう",
-    "Recent Meal": "けまのちゅう"
+    "Recent Meal": "けまのちゅう",
+    "No Record": "けちゅけ"
 }
