--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -19,5 +19,6 @@
     "Wake up Time": "起床時間",
     "Record Meal": "食事記録をつける",
     "First Meal": "最初の食事",
-    "Recent Meal": "直近の食事"
+    "Recent Meal": "直近の食事",
+    "No Record": "レコードなし"
 }
