--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,5 +19,6 @@
     "Wake up Time": "Wake up Time",
     "Record Meal": "Record Meal",
     "First Meal": "最初の食事",
-    "Recent Meal": "直近の食事"
+    "Recent Meal": "直近の食事",
+    "No Record": "No Record"
 }
