Added record component

--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -20,5 +20,14 @@
     "Record Meal": "ちゅままちゅ",
     "First Meal": "ちゅまのちゅう",
     "Recent Meal": "けまのちゅう",
-    "No Record": "けちゅけ"
+    "No Record": "けちゅけ",
+    "Breakfast": "けけちゅ",
+    "Lunch": "ちゅんけ",
+    "Snake": "ちゅんちんけ",
+    "Dinner": "ちゅけけちゅ",
+    "Drink": "けちゅ",
+    "Date": "ちゅちゅ",
+    "Time": "けけ",
+    "Submit": "ちゅけ",
+    "Back": "けちけ"
 }
