--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,5 +20,14 @@
     "Record Meal": "Record Meal",
     "First Meal": "最初の食事",
     "Recent Meal": "直近の食事",
-    "No Record": "No Record"
+    "No Record": "No Record",
+    "Breakfast": "Breskfast",
+    "Lunch": "Lunch",
+    "Snack": "Snack",
+    "Dinner": "Dinner",
+    "Drink": "Drink",
+    "Date": "Date",
+    "Time": "Time",
+    "Submit": "Submit",
+    "Back": "Back"
 }
