Fixed Record page style +a

--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -29,5 +29,7 @@
     "Date": "ちゅちゅ",
     "Time": "けけ",
     "Submit": "ちゅけ",
-    "Back": "けちけ"
+    "Back": "けちけ",
+    "CheckIn": "ちゅんいん",
+    "AlreadyCheckedIn": "ちゅまいんけま"
 }
