--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,5 +29,7 @@
     "Date": "Date",
     "Time": "Time",
     "Submit": "Submit",
-    "Back": "Back"
+    "Back": "Back",
+    "CheckIn": "CheckIn",
+    "AlreadyCheckedIn": "AlreadyCheckedIn"
 }
