Added history, recharts and pixijs

--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -31,5 +31,7 @@
     "Submit": "ちゅけ",
     "Back": "けちけ",
     "CheckIn": "ちゅんいん",
-    "AlreadyCheckedIn": "ちゅまいんけま"
+    "AlreadyCheckedIn": "ちゅまいんけま",
+    "Medicine": "けまちゅん",
+    "History": "ちゅけ"
 }
