before firebase function config

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,8 +18,8 @@
     "Bed Time": "Bed Time",
     "Wake up Time": "Wake up Time",
     "Record Meal": "Record Meal",
-    "First Meal": "最初の食事",
-    "Recent Meal": "直近の食事",
+    "First Meal": "First Meal",
+    "Recent Meal": "Recent Meal",
     "No Record": "No Record",
     "Breakfast": "Breskfast",
     "Lunch": "Lunch",
