Added line nofity

--- a/src/locales/cm.json
+++ b/src/locales/cm.json
@@ -33,5 +33,6 @@
     "CheckIn": "ちゅんいん",
     "AlreadyCheckedIn": "ちゅまいんけま",
     "Medicine": "けまちゅん",
-    "History": "ちゅけ"
+    "History": "ちゅけ",
+    "Meal": "ちゅんのちゅん"
 }
