--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,5 +33,6 @@
     "CheckIn": "CheckIn",
     "AlreadyCheckedIn": "AlreadyCheckedIn",
     "Medicine": "Medicine",
-    "History": "History"
+    "History": "History",
+    "Meal": "Meal"
 }
