Reupdate and removed firebase info

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,12 +1,11 @@
 {
-    "Chuma Points!": "Chuma Points!",
-    "'s Chuma Bank!": "'s Chuma Bank!",
-    "CHUMA": "CHUMA",
+    "Healthy Points!": "Healthy Points!",
+    "'s Healthy Point's Bank!": "'s Healthy Point's Bank!",
+    "Health Tracker": "Health Tracker",
     "Profile": "Profile",
     "My account": "My account",
-    "Welcome！Chuma App!": "Welcome！Chuma App!",
+    "Welcome！Health Tracking App!": "Welcome！Health Tracking App!",
     "Change Avatar": "Change Avatar",
-    "Chuma Tracker": "Chuma Tracker",
     "Login": "Login",
     "Signup": "Signup",
     "SignOut": "SignOut",
