--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,12 +1,11 @@
 {
-    "Chuma Points!": "ちゅまポイント！",
-    "'s Chuma Bank!": "のちゅま銀行！",
-    "CHUMA": "ちゅま",
+    "Healthy Points!": "健康ポイント！",
+    "'s Healthy Point's Bank!": "の健康ポイント銀行！",
+    "Health Tracker": "健康記録",
     "Profile": "プロファイル",
     "My account": "マイアカウント",
-    "Welcome！Chuma App!": "ようこそ！ちゅまアプリ！",
+    "Welcome！Health Tracking App!": "ようこそ！ちゅまアプリ！",
     "Change Avatar": "アバター変更",
-    "Chuma Tracker": "ちゅま記録",
     "Login": "ログイン",
     "Signup": "登録",
     "SignOut": "ログアウト",
